# slim

./: .gitignore  README.md  config.yaml  lyric_generator.py  pyproject.toml
extra/: csv_extractor.py  message_extractor.py  quantise_model.py
slim-deployment/: Dockerfile  main.py  requirements.txt
slim-frontend/: index.html  service-worker.js
